--- a/spielrein/renatchen/index.html
+++ b/spielrein/renatchen/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<head>
+</head>
 <body>
 <h1>Renatchen's Theory of Human Origin</h1>
 <p>The first theory of human origin that I noticed from Renachten came about when she was four and a half years old. I do not mean to say that the young girl did not previously have other theories, but she doesn’t reveal any. During the long preliminary stage of analysis, the child allowed much to be perceived that could show the analyst she had dealt with this topic extensively. The young girl showed a keen interest in holes and pits; the stories she made up dealt with this topic, and her play was inspired by this interest. She found great pleasure in digging in the ground, and she very much wanted to remove a board from the flooring such that there would be a hole through which one could fall into the neighbors’ residence; presumably this was also a case of her great predilection for cutting out [Ausschneiden]. Scarcely after waking, she wanted to have scissors and paper; she then remained tranquil for hours, jabbering to herself, only exciting my disapproval by cutting holes in her bedding and clothing, or be gleefully tearing everything apart. As another bad habit, in her fourth year she became accustomed to throwing down and breaking [Hinauswerfen und Zerbrechen] things. One day we had the following conversation:</p>
